--- a/www/index.html
+++ b/www/index.html
@@ -29,8 +29,8 @@
         <div class="app">
             <h1>Aarhus Sv&aelig;veflyveklub</h1>
             <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
+                <p class="event listening">Vent...</p>
+                <p class="event received"><a href="http://aarhusit.dk/projects/aasvk-startliste/">aarhusit.dk</a></p>
             </div>
         </div>
         <script type="text/javascript" src="phonegap.js"></script>
