--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,8 @@
         <title>Aasvk</title>
     </head>
     <body>
+		<div class="app"><div id="deviceready"></div></div>
+
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             app.initialize();
