--- a/www/index.html
+++ b/www/index.html
@@ -25,8 +25,7 @@
         <title>Aasvk</title>
     </head>
     <body>
-		<div class="app"><div id="deviceready"></div></div>
-
+		<script type="text/javascript" src="phonegap.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             app.initialize();
